<resources>
    <string name="app_name">FitnessApp</string>
    <string name="List">ListLatihan</string>
    <string name="latihanTangan">Latihan tangan</string>
    <string name="latihanKaki">Latihan kaki</string>
    <string name="latihanSeluruh">Latihan Seluruh tubuh</string>
    <string name="LatihanBawah">Latihan bawah</string>
    <string name="title_activity_seluruhtubuh">seluruhtubuh</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
